# remade_ffmpeg_rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  SECURITY.md  deny.toml  readme.md  rust-toolchain.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/rff/: Cargo.toml
crates/rff-auth/: Cargo.toml
crates/rff-auth/src/: lib.rs
crates/rff-cli/: Cargo.toml
crates/rff-cli/src/: args.rs  ffmpeg.rs  ffprobe.rs  lib.rs
crates/rff-codec/: Cargo.toml
crates/rff-codec-aac/: Cargo.toml
crates/rff-codec-aac/src/: bits.rs  codebook.rs  decode.rs  dsp.rs  encode.rs  huffman.rs  ics.rs  lib.rs  swb.rs  tables.rs
crates/rff-codec-avif/: Cargo.toml
crates/rff-codec-avif/src/: lib.rs
crates/rff-codec-flac/: Cargo.toml
crates/rff-codec-flac/src/: encode.rs  lib.rs  md5.rs
crates/rff-codec-gif/: Cargo.toml
crates/rff-codec-gif/src/: lib.rs
crates/rff-codec-h264/: Cargo.toml
crates/rff-codec-h264/src/: lib.rs
crates/rff-codec-jpeg/: Cargo.toml
crates/rff-codec-jpeg/src/: lib.rs
crates/rff-codec-jxl/: Cargo.toml
crates/rff-codec-jxl/src/: lib.rs
crates/rff-codec-mp3/: .gitignore  Cargo.toml
crates/rff-codec-mp3/examples/: mp3lab.rs  mp3quality.rs
crates/rff-codec-mp3/src/: bitio.rs  frame.rs  header.rs  lib.rs  tables.rs
crates/rff-codec-mp3/src/decode/: antialias.rs  codebooks.rs  huffman.rs  imdct.rs  mod.rs  requantize.rs  reservoir.rs  scalefactors.rs  sideinfo.rs  stereo.rs  synth_window.rs  synthesis.rs
crates/rff-codec-mp3/src/encode/: antialias.rs  bitstream.rs  fft.rs  filterbank.rs  huffman.rs  mdct.rs  mod.rs  psychoacoustic.rs  quantize.rs  shortblock.rs  stereo.rs
crates/rff-codec-mp3/src/lab/: bricks.rs  experiment.rs  metrics.rs  mod.rs  quality.rs  quantizer.rs  signals.rs  variant.rs
crates/rff-codec-openh264/: Cargo.toml
crates/rff-codec-openh264/src/: lib.rs
crates/rff-codec-opus/: Cargo.toml
crates/rff-codec-opus/src/: lib.rs
crates/rff-codec-pcm/: Cargo.toml
crates/rff-codec-pcm/src/: lib.rs
crates/rff-codec-png/: Cargo.toml
crates/rff-codec-png/src/: lib.rs
crates/rff-codec-vorbis/: Cargo.toml
crates/rff-codec-vorbis/src/: lib.rs
crates/rff-codec-vorbis/src/encode/: floor.rs  frame.rs  mdct.rs  mod.rs  psy.rs  setup.rs
crates/rff-codec-vp9/: Cargo.toml
crates/rff-codec-vp9/benches/: vp9_decode.rs
crates/rff-codec-vp9/benches/data/: vp9_720p.ivf
crates/rff-codec-vp9/examples/: tile_info.rs
crates/rff-codec-vp9/src/: adapt.rs  bits.rs  block.rs  decode.rs  geom_tables.rs  inter.rs  lib.rs  loopfilter.rs  mv.rs  predict.rs  prob.rs  prob_tables.rs  quant.rs  scan_tables.rs  token.rs  transform.rs
crates/rff-codec-vp9/src/encode/: adapt.rs  bitwriter.rs  compressed.rs  encoder.rs  frame.rs  frameenc.rs  header.rs  intermode.rs  mod.rs  mv.rs  prob.rs  quality.rs  quantize.rs  syntax.rs  tokens.rs  transform.rs
crates/rff-codec-vp9/src/testdata/: keyframe.vp9
crates/rff-codec-webp/: Cargo.toml
crates/rff-codec-webp/src/: lib.rs
crates/rff-codec/src/: lib.rs
crates/rff-core/: Cargo.toml
crates/rff-core/src/: dict.rs  error.rs  frame.rs  lib.rs  media.rs  packet.rs  rational.rs
crates/rff-filter/: Cargo.toml
crates/rff-filter/src/: lib.rs
crates/rff-format/: Cargo.toml
crates/rff-format-avi/: Cargo.toml
crates/rff-format-avi/src/: lib.rs
crates/rff-format-avif/: Cargo.toml
crates/rff-format-avif/src/: lib.rs
crates/rff-format-flac/: Cargo.toml
crates/rff-format-flac/src/: lib.rs
crates/rff-format-flv/: Cargo.toml
crates/rff-format-flv/src/: lib.rs  mux.rs
crates/rff-format-flv/tests/: roundtrip.rs
crates/rff-format-gif/: Cargo.toml
crates/rff-format-gif/src/: lib.rs
crates/rff-format-hls/: Cargo.toml
crates/rff-format-hls/src/: lib.rs
crates/rff-format-jpeg/: Cargo.toml
crates/rff-format-jpeg/src/: lib.rs
crates/rff-format-jxl/: Cargo.toml
crates/rff-format-jxl/src/: lib.rs
crates/rff-format-mkv/: Cargo.toml
crates/rff-format-mkv/src/: lib.rs
crates/rff-format-mp3/: Cargo.toml
crates/rff-format-mp3/src/: lib.rs
crates/rff-format-mp4/: Cargo.toml
crates/rff-format-mp4/src/: lib.rs
crates/rff-format-ogg/: Cargo.toml
crates/rff-format-ogg/src/: lib.rs
crates/rff-format-png/: Cargo.toml
crates/rff-format-png/src/: lib.rs
crates/rff-format-srt/: Cargo.toml
crates/rff-format-srt/src/: lib.rs
crates/rff-format-ts/: Cargo.toml
crates/rff-format-ts/src/: lib.rs  mux.rs
crates/rff-format-ts/tests/: roundtrip.rs
crates/rff-format-wav/: Cargo.toml
crates/rff-format-wav/src/: lib.rs
crates/rff-format-webp/: Cargo.toml
crates/rff-format-webp/src/: lib.rs
crates/rff-format-webvtt/: Cargo.toml
crates/rff-format-webvtt/src/: lib.rs
crates/rff-format/src/: lib.rs
crates/rff-io/: Cargo.toml
crates/rff-io/src/: lib.rs
crates/rff-resample/: Cargo.toml
crates/rff-resample/src/: lib.rs
crates/rff-resample/tests/: bench_resample.rs
crates/rff-server/: Cargo.toml
crates/rff-server/src/: main.rs
crates/rff-subtitle/: Cargo.toml
crates/rff-subtitle/src/: lib.rs
crates/rff-ui/: Cargo.toml
crates/rff-ui/src/: main.rs
crates/rff/examples/: make_sample_avif.rs  make_sample_wav.rs
crates/rff/fuzz/: Cargo.toml
crates/rff/src/: lib.rs  probe.rs  transcode.rs
crates/rff/tests/: aac_m4a.rs  audio_pipeline.rs  av_mp4.rs  av_mux.rs  avif_roundtrip.rs  demuxer_fuzz.rs  flac_baseline.rs  flac_roundtrip.rs  fuzz_decode.rs  fuzz_demux.rs  fuzz_robustness.rs  opus_pipeline.rs  png_pipeline.rs  (+4 more)
docs/: architecture.md  benchmarks.md  codec-aac-encoder.md  codec-flac-encoder.md  codec-vorbis-encoder.md  compatibility.md  ffmpeg-parity.md  mp3-encoder-plan.md  mp3-lab.md  mp3-optimization-plan.md  mp3-quality-harness-plan.md  mp3-simd-plan.md  perf-threading.md  pure-rust-codecs.md  roadmap.md  vp9-encoder-plan.md  vp9-stage3-plan.md
scripts/: fetch-vp9-vectors.sh
tools/quality/: README.md  analyze_calib.py  corpus_eval.sh  fetch_corpus.sh  peaq_align.py  peaq_run.py  setup_peaq.py
(+2 files in other folders)
