[package]
name = "rff-codec-avif"
description = "Remade FFmpeg (Rust): AVIF still-image codec (AV1 intra frame)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rff-core.workspace = true
rff-codec.workspace = true

# AV1 encoder backing the AVIF encode path (rusty-av1-toolkit fork of rav1e).
rusty_av1e.workspace = true
# AV1 decoder backing the AVIF decode path (rusty-av1-toolkit fork of rav1d),
# pure-Rust via its native safe Rust API (`rust_api`) — no FFI.
rusty_av1d.workspace = true
