[package]
name = "rff-codec-flac"
description = "Remade FFmpeg (Rust): FLAC lossless audio decoder."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rff-core.workspace = true
rff-codec.workspace = true
claxon.workspace = true
