[package]
name = "rff-codec-gif"
description = "Remade FFmpeg (Rust): GIF still-image codec (first frame)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rff-core.workspace = true
rff-codec.workspace = true
gif.workspace = true
