[package]
name = "rff-codec-jpeg"
description = "Remade FFmpeg (Rust): JPEG/MJPEG still-image codec (RGB)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rff-core.workspace = true
rff-codec.workspace = true
jpeg-decoder.workspace = true
jpeg-encoder.workspace = true
