[package]
name = "rff-codec-jxl"
description = "Remade FFmpeg (Rust): JPEG XL image decoder."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rff-core.workspace = true
rff-codec.workspace = true
jxl-oxide.workspace = true
