[package]
name = "rff-codec-vorbis"
description = "Remade FFmpeg (Rust): Vorbis audio decoder (Ogg Vorbis)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rff-core.workspace = true
rff-codec.workspace = true
lewton.workspace = true
