[package]
name = "rff-filter"
description = "Remade FFmpeg (Rust): frame filters (scale, crop) — the libavfilter equivalent."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rff-core.workspace = true
