[package]
name = "rff-format-avif"
description = "Remade FFmpeg (Rust): AVIF (AV1 Image File Format) container demuxer/muxer."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rff-core.workspace = true
rff-format.workspace = true
