[package]
name = "rff-format-flac"
description = "Remade FFmpeg (Rust): native FLAC audio container."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rff-core.workspace = true
rff-format.workspace = true
