[package]
name = "rff-format-flv"
description = "Remade FFmpeg (Rust): FLV (Flash Video) container."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rff-core.workspace = true
rff-format.workspace = true
