[package]
name = "rff-format-hls"
description = "Remade FFmpeg (Rust): HLS output — MPEG-TS segmenter + .m3u8 playlist."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rff-core.workspace = true
rff-format.workspace = true
rff-format-ts.workspace = true
