[package]
name = "rff-format-jpeg"
description = "Remade FFmpeg (Rust): JPEG single-image container (file = codec stream)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rff-core.workspace = true
rff-format.workspace = true
