[package]
name = "rff-format-mkv"
description = "Remade FFmpeg (Rust): Matroska / WebM demuxer (EBML)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rff-core.workspace = true
rff-format.workspace = true
