[package]
name = "rff-format-mp3"
description = "Remade FFmpeg (Rust): native MP3 elementary-stream container."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rff-core.workspace = true
rff-format.workspace = true
